--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -107,25 +107,25 @@
                     android:layout_height="4dp"
                     android:background="@color/lightgray" />
 
-                <com.febers.iuestc.view.MyGridView
+                <com.febers.iuestc.view.CustomGridView
                     android:id="@+id/grid_view_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:numColumns="2"
                     android:clickable="true">
-                </com.febers.iuestc.view.MyGridView>
+                </com.febers.iuestc.view.CustomGridView>
 
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="@color/lightgray" />
-            <com.febers.iuestc.view.MyListView
+            <com.febers.iuestc.view.CustomListView
                 android:id="@+id/lv_user_setting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false">
-            </com.febers.iuestc.view.MyListView>
+            </com.febers.iuestc.view.CustomListView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
