--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -33,11 +33,11 @@
         android:scrollbars="vertical"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <com.febers.iuestc.view.MyViewPager
+        <com.febers.iuestc.view.CustomViewPager
             android:id="@+id/vp_news"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        </com.febers.iuestc.view.MyViewPager>
+        </com.febers.iuestc.view.CustomViewPager>
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
