--- a/app/src/main/res/layout/fragment_ecard.xml
+++ b/app/src/main/res/layout/fragment_ecard.xml
@@ -123,6 +123,7 @@
                 android:layout_marginLeft="7dp"
                 android:layout_marginRight="7dp"
                 android:layout_marginTop="7dp"
+                android:layout_marginBottom="1dp"
                 style="@style/CardViewClick">
                 <LinearLayout
                     android:id="@+id/ll_ecard_record"
