--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
                 android:clickable="true"
                 app:cardElevation="2dp">
 
-                <com.febers.iuestc.view.MyGridView
+                <com.febers.iuestc.view.CustomGridView
                     android:id="@+id/home_grid_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                     android:horizontalSpacing="2dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp">
-                </com.febers.iuestc.view.MyGridView>
+                </com.febers.iuestc.view.CustomGridView>
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
