--- a/app/src/main/res/layout/fragment_news_fragment1.xml
+++ b/app/src/main/res/layout/fragment_news_fragment1.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_news_1"
+        android:id="@+id/rv_news"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
