--- a/app/src/main/res/layout/item_lib_query.xml
+++ b/app/src/main/res/layout/item_lib_query.xml
@@ -35,7 +35,8 @@
                 android:text="标题"
                 android:gravity="center"
                 android:textSize="15dp"
-                android:layout_marginBottom="3dp"/>
+                android:layout_marginBottom="3dp"
+                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/tv_lib_query_position"
                 android:layout_width="match_parent"
