--- a/app/src/main/res/layout/dialog_course.xml
+++ b/app/src/main/res/layout/dialog_course.xml
@@ -1,53 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Created by Febers 2018.
-  ~ Copyright (c). All rights reserved.
-  ~
-  ~ Last Modified 18-6-7 上午12:08
-  ~
-  -->
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/about_margin"
     android:background="@color/white">
     <TextView
         android:id="@+id/tv_dialog_course_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/about_margin"
+        android:layout_marginTop="@dimen/about_margin"
         android:textColor="@color/black"
         android:textSize="15dp"
         android:text="电磁场与波"/>
+    <TextView
+        android:id="@+id/tv_dialog_course_teacher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/about_margin"
+        android:layout_marginLeft="@dimen/about_margin"
+        android:textSize="13dp"
+        android:text="孟敏"/>
     <TextView
         android:id="@+id/tv_dialog_course_classroom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/about_margin"
-        android:textSize="12dp"
+        android:layout_marginLeft="@dimen/about_margin"
+        android:textSize="13dp"
         android:text="品C204"/>
     <TextView
         android:id="@+id/tv_dialog_course_week"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/about_margin"
-        android:textSize="12dp"
+        android:layout_marginLeft="@dimen/about_margin"
+        android:textSize="13dp"
         android:text="2-16周" />
     <TextView
         android:id="@+id/tv_dialog_course_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/about_margin"
-        android:textSize="12dp"
+        android:layout_marginLeft="@dimen/about_margin"
+        android:layout_marginBottom="@dimen/about_margin"
+        android:textSize="13dp"
         android:text="周一5-6节"/>
-    <TextView
-        android:id="@+id/tv_dialog_course_teacher"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/about_margin"
-        android:textSize="12dp"
-        android:text="孟敏"/>
 </LinearLayout>
