--- a/app/src/main/res/drawable/cornerbg_gray.xml
+++ b/app/src/main/res/drawable/cornerbg_gray.xml
@@ -9,7 +9,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/gray" />
+    <solid android:color="@color/grey" />
     <stroke
         android:width="0.01dp"
         android:color="#bfbfbf" />
