--- a/app/src/main/res/layout/activity_grade.xml
+++ b/app/src/main/res/layout/activity_grade.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/tl_grade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabTextColor="@color/gray"
+                app:tabTextColor="@color/grey"
                 app:tabSelectedTextColor="@color/white">
             </android.support.design.widget.TabLayout>
         </android.support.design.widget.AppBarLayout>
