--- a/app/src/main/res/layout/fragment_news_fragment.xml
+++ b/app/src/main/res/layout/fragment_news_fragment.xml
@@ -18,7 +18,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_news"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="always">
+        android:layout_height="match_parent">
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
