--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,20 +23,41 @@
     <color name="darkWindowBackgroundSecond">#37474f</color>
 
     <color name="black">#000000</color>
-    <color name="ligthBlue">#14aff5</color>
-    <color name="blue">#03A9F4</color>
-    <color name="red">#ff5654</color>
+
+    <color name="ligthBlue">#03A9F4</color>
+    <color name="lightBlueAccent">#40C4FF</color>
+    <color name="blue">#2196F3</color>
+    <color name="blueAccent">#448AFF</color>
+    <color name="royalBlue">#4169E1</color>
+
+    <color name="red">#D32F2F</color>
+    <color name="redAccent">#FF5252</color>
     <color name="transparent_red">#ddff5654</color>
+
     <color name="white">#FFFFFF</color>
     <color name="lightgray">#EEEEEE</color>
-    <color name="gray">#bbbec4</color>
-    <color name="royalBlue">#4169E1</color>
-    <color name="lightSeaGreen">#20B2AA</color>
+    <color name="grey">#455A64</color>
+    <color name="greyAccent">#B0BEC5</color>
+
+    <color name="pink">#EC407A</color>
+    <color name="pinkAccent">#F06292</color>
     <color name="yellow">#FFFF00</color>
+
+    <color name="green">#4CAF50</color>
+    <color name="greenAccent">#69F0AE</color>
+    <color name="lightSeaGreen">#20B2AA</color>
+
+    <!--鸭绿-->
+    <color name="teal">#009688</color>
+    <color name="tealAccent">#80CBC4</color>
+
+    <color name="orange">#FF5722</color>
+    <color name="orangeAccent">#FF6E40</color>
     <color name="darkOrange">#FF8C00</color>
-    <color name="green">#8BC34A</color>
-    <color name="orange">#ff7043</color>
-    <color name="purple">#7e57c2</color>
+
+    <color name="purple">#9C27B0</color>
+    <color name="purpleAccent">#E040FB</color>
+
     <color name="cyan">#00acc1</color>
 
     <color name="black_overlay">#66000000</color>
