--- a/app/src/main/res/layout/item_lib_query.xml
+++ b/app/src/main/res/layout/item_lib_query.xml
@@ -14,54 +14,33 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <android.support.v7.widget.CardView
+        android:id="@+id/cv_book_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_margin="1dp"
         style="@style/CardViewClick">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="3dp">
+            android:layout_margin="7dp">
             <TextView
-                android:id="@+id/tv_lib_query_title"
+                android:id="@+id/tv_item_lib_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="标题"
                 android:gravity="center"
-                android:textSize="15dp"
-                android:layout_marginBottom="3dp"
-                android:textColor="@color/black"/>
+                android:textSize="17dp"
+                android:layout_marginBottom="5dp"
+                android:textStyle="bold"/>
             <TextView
-                android:id="@+id/tv_lib_query_position"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="位置"
-                android:gravity="center"
-                android:textSize="12dp"
-                android:layout_marginBottom="3dp"/>
-            <TextView
-                android:id="@+id/tv_lib_query_detail_position"
+                android:id="@+id/tv_item_lib_info"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="详细位置"
-                android:textSize="12dp"
+                android:textSize="14dp"
                 android:gravity="center"
-                android:layout_marginBottom="3dp"/>
-            <TextView
-                android:id="@+id/tv_lib_query_get_book_code"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="索书号"
-                android:gravity="center"
-                android:textSize="12dp"
                 android:layout_marginBottom="3dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
