--- a/app/src/main/res/layout/fragment_ecard.xml
+++ b/app/src/main/res/layout/fragment_ecard.xml
@@ -31,7 +31,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/srl_ecard"
+        android:id="@+id/srl_ecard_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
