--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -7,31 +7,31 @@
   ~
   -->
 
-<android.support.design.widget.CoordinatorLayout
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="?attr/myBackgroundColor">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/user_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_scrollFlags="scroll|enterAlways|snap">
-        </android.support.v7.widget.Toolbar>
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,55 +45,43 @@
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/cv_user"
+                    style="@style/CardViewClick"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/CardViewClick"
                     app:cardElevation="0dp">
+
                     <android.support.constraint.ConstraintLayout
                         android:id="@+id/ll_user"
                         android:layout_width="match_parent"
-                        android:layout_height="90dp"
+                        android:layout_height="100dp"
                         android:orientation="horizontal">
 
-                        <ImageView
-                            android:id="@+id/iv_user_icon"
-                            android:layout_width="70dp"
-                            android:layout_height="70dp"
-                            android:layout_marginEnd="8dp"
+                        <TextView
+                            android:id="@+id/tv_fragment_user_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
-                            android:layout_marginRight="8dp"
                             android:layout_marginStart="16dp"
-                            android:src="@drawable/ic_smile_blue"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.047"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-
-                        <TextView
-                            android:id="@+id/tv_user_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="32dp"
-                            android:layout_marginStart="32dp"
                             android:text="未登录"
-                            android:textSize="20sp"
+                            android:textSize="30sp"
+                            android:textColor="?attr/colorPrimary"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/iv_user_icon"
+                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.291" />
+                            app:layout_constraintVertical_bias="0.271" />
 
                         <TextView
-                            android:id="@+id/tv_user_id"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/tv_fragment_user_id"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="32dp"
-                            android:layout_marginStart="32dp"
-                            android:text="2016030301007"
+                            android:layout_marginLeft="18dp"
+                            android:layout_marginStart="18dp"
+                            android:textColor="?attr/colorAccent"
+                            android:text="学号"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/iv_user_icon"
+                            app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.666" />
+                            app:layout_constraintVertical_bias="0.802" />
 
                         <android.support.constraint.Guideline
                             android:id="@+id/guideline"
@@ -108,31 +96,49 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical"
                             app:layout_constraintGuide_begin="20dp" />
+
+                        <TextView
+                            android:id="@+id/imageView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="16dp"
+                            android:layout_marginLeft="8dp"
+                            android:layout_marginRight="16dp"
+                            android:layout_marginStart="8dp"
+                            android:gravity="center"
+                            android:text="➭"
+                            android:textColor="?attr/colorPrimary"
+                            android:textSize="25dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="1.0"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintVertical_bias="0.49" />
                     </android.support.constraint.ConstraintLayout>
                 </android.support.v7.widget.CardView>
 
-                <include layout="@layout/layout_divide_line"/>
+                <include layout="@layout/layout_divide_line" />
 
                 <com.febers.iuestc.view.custom.CustomGridView
                     android:id="@+id/grid_view_user"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:numColumns="2"
+                    android:background="?attr/myBackgroundColor"
                     android:clickable="true"
-                    android:background="?attr/myBackgroundColor">
-                </com.febers.iuestc.view.custom.CustomGridView>
+                    android:numColumns="2"></com.febers.iuestc.view.custom.CustomGridView>
 
             </LinearLayout>
-            <include layout="@layout/layout_divide_line"/>
+
+            <include layout="@layout/layout_divide_line" />
 
             <com.febers.iuestc.view.custom.CustomListView
                 android:id="@+id/lv_user_setting"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
                 android:layout_marginBottom="60dp"
-                android:background="?attr/myBackgroundColor">
-            </com.febers.iuestc.view.custom.CustomListView>
+                android:background="?attr/myBackgroundColor"
+                android:nestedScrollingEnabled="false"></com.febers.iuestc.view.custom.CustomListView>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
