--- a/app/src/main/res/layout/item_grade_per.xml
+++ b/app/src/main/res/layout/item_grade_per.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="16dp"
             android:gravity="center"
             android:text="00"
-            android:textColor="@color/colorPrimary"
+            android:textColor="?attr/colorPrimary"
             android:textSize="30dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.954"
