--- a/app/src/main/res/layout/layout_grade_header.xml
+++ b/app/src/main/res/layout/layout_grade_header.xml
@@ -12,7 +12,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@color/colorPrimary">
+    android:background="?attr/colorPrimary">
 
     <ImageView
         android:layout_width="50dp"
