--- a/app/src/main/res/layout/layout_home_header.xml
+++ b/app/src/main/res/layout/layout_home_header.xml
@@ -11,7 +11,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:background="@color/colorPrimary">
+    android:background="?attr/colorPrimary">
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
