--- a/app/src/main/res/menu/course_menu.xml
+++ b/app/src/main/res/menu/course_menu.xml
@@ -11,8 +11,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/item_course_choose_week"
+        android:icon="@drawable/ic_choose_white"
         android:title="设置当前周数"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/item_course_refresh"
         android:title="刷新"
