--- a/app/src/main/res/menu/more_menu.xml
+++ b/app/src/main/res/menu/more_menu.xml
@@ -11,6 +11,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/user_menu_logout"
+        android:icon="@drawable/ic_logout_white"
         android:title="注销"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
