--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -41,11 +41,15 @@
         android:scrollbars="vertical"
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <com.febers.iuestc.view.custom.CustomViewPager
-            android:id="@+id/vp_news"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </com.febers.iuestc.view.custom.CustomViewPager>
+            android:layout_height="match_parent">
+            <com.febers.iuestc.view.custom.CustomViewPager
+                android:id="@+id/vp_news"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.febers.iuestc.view.custom.CustomViewPager>
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
