--- a/app/src/main/res/drawable/cornerbg_teal.xml
+++ b/app/src/main/res/drawable/cornerbg_teal.xml
@@ -9,11 +9,11 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/teal" />
-    <stroke
-        android:width="0.01dp"
-        android:color="#bfbfbf" />
+    <solid android:color="@color/tealAccent" />
+    <!--<stroke-->
+        <!--android:width="0.01dp"-->
+        <!--android:color="#bfbfbf" />-->
     <corners
-        android:radius="8dp"
+        android:radius="4dp"
         />
 </shape>
